# public/doc/swagger.yaml
@@ -64,6 +64,23 @@ paths:
           description: 成功
         '400':
           description: エラー
+  /pdf/{id}:
+    get:
+      tags:
+        - settlement
+      summary: データ元の pdf ファイルを参照する
+      description: データ元の pdf ファイルを参照する
+      parameters:
+        - name: id
+          type: string
+          in: path
+          description: id（ファイル名）
+          required: true
+      responses:
+        '200':
+          description: 成功
+        '400':
+          description: エラー
   /reset:
     post:
       tags:
